# flatlandian

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/flatlandian/: __init__.py  entity.py  geometry.py  grid.py  int_vector2.py  integer_point.py  integer_vector2.py  maths.py  navigation_grid.py  world.py
tests/: test_entity.py  test_geometry.py  test_grid.py  test_int_vector2.py  test_navigation_grid.py  test_world.py
